apps/wireguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: wireguard
      containers:
        - name: wireguard
          image: masipcat/wireguard-go:0.0.20230223@sha256:e61623dd37b86f046337f3df62ac4c8305a635c00cd3c5497190dbdfc62e6d2e
          command:
          - sh
          - -c
          - "/entrypoint.sh"
          ports:
          - containerPort: 443
            protocol: UDP
            name: wireguard
          - containerPort: 8080
            protocol: TCP
            name: healthcheck
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          resources:
            requests:
              memory: 64Mi
              cpu: "10m"
            limits:
              memory: 256Mi
          volumeMounts:
          - name: secret
            mountPath: /etc/wireguard/wg0.conf
            subPath: wg0.conf
          livenessProbe: &probe
            httpGet:
              path: /
              port: healthcheck
          readinessProbe: *probe
      volumes:
      - name: secret
        secret:
          secretName: wg-secret
