apps/wireguard/wireguard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: masipcat/wireguard-go:0.0.20230223@sha256:85175a40ea588483791ff57cbd926d45a3699229c8a6cb1382c468f128a3dee7
          command:
          - sh
          - -c
          - "/entrypoint.sh & /healthcheck.sh"
          ports:
          - containerPort: 443
            protocol: UDP
            name: wireguard
          - containerPort: 8080
            protocol: TCP
            name: healthcheck
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          resources:
            requests:
              memory: 64Mi
              cpu: "10m"
            limits:
              memory: 256Mi
          volumeMounts:
          - name: secret
            mountPath: /etc/wireguard/wg0.conf
            subPath: wg0.conf
          - name: wg-healthcheck
            mountPath: /healthcheck.sh
            subPath: healthcheck.sh
          livenessProbe:
            httpGet:
              path: /
              port: healthcheck
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 7
      volumes:
      - name: secret
        secret:
          secretName: wg-secret
      - name: wg-healthcheck
        configMap:
          name: wg-healthcheck
          defaultMode: 0755
