apps/wireguard/wireguard-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: "wireguard-headless"
  replicas: 3
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: wireguard
      containers:
        - name: wireguard
          image: sholdee/wireguard-go-docker:0.0.20230223@sha256:cabc0db66fe4d0299e19733277e197c41131ccb5e521e4f0365cd49a0f6c9083
          command:
          - sh
          - -c
          - "/entrypoint.sh"
          ports:
          - containerPort: 443
            protocol: UDP
            name: wireguard
          - containerPort: 8080
            protocol: TCP
            name: healthcheck
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          resources:
            requests:
              memory: 64Mi
              cpu: "10m"
            limits:
              memory: 256Mi
          volumeMounts:
          - name: secret
            mountPath: /etc/wireguard/wg0.conf
            subPath: wg0.conf
          livenessProbe: &probe
            httpGet:
              path: /
              port: healthcheck
          readinessProbe: *probe
      volumes:
      - name: secret
        secret:
          secretName: wg-secret
