apps/wireguard/wireguard-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-headless
  namespace: wireguard
spec:
  clusterIP: None
  selector:
    app: wireguard
  ports:
  - port: 443
    targetPort: 443
    protocol: UDP
  - port: 8080
    targetPort: 8080
    protocol: TCP
