apps/wireguard/wireguard-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard-proxy
  namespace: wireguard
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wireguard-proxy
  template:
    metadata:
      labels:
        app: wireguard-proxy
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: wireguard-proxy
      containers:
      - name: wireguard-proxy
        image: envoyproxy/envoy:v1.30.4
        ports:
        - containerPort: 443
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
      volumes:
      - name: config
        configMap:
          name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-proxy
  namespace: wireguard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.77.26
  ports:
  - port: 443
    targetPort: 443
    protocol: UDP
  selector:
    app: wireguard-proxy
