apps/wireguard/wireguard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.77.26
  externalTrafficPolicy: Cluster
  ports:
  - port: 443
    targetPort: 443
    protocol: UDP
  selector:
    app: wireguard
