apps/wireguard/wireguard-network.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wireguard
  namespace: wireguard
spec:
  endpointSelector:
    matchLabels:
      app: wireguard
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toEndpoints:
        - matchLabels:
            app: unifi
            io.kubernetes.pod.namespace: unifi
    - toCIDRSet:
        - cidr: 192.168.77.0/24
    - toCIDRSet:
        - cidr: 192.168.99.0/24
    - toCIDRSet:
        - cidr: 10.2.0.0/24
